--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.DetailActivity"></activity>
+        <activity android:name=".activity.PemesananActivity"></activity>
+        <activity android:name=".activity.DetailActivity" />
         <activity android:name=".BerandaActivity" />
         <activity android:name="Fragment.FragmentLainnya" />
         <activity android:name="Fragment.FragmentProfil" />
