--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BerandaActivity"></activity>
+        <activity android:name=".activity_awal"></activity>
+        <activity android:name=".activity_login" />
+        <activity android:name=".activity_register" />
+        <activity android:name=".BerandaActivity" />
         <activity android:name="Fragment.FragmentLainnya" />
         <activity android:name="Fragment.FragmentProfil" />
         <activity android:name="Fragment.FragmentPesanan" />
