--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat May 18 13:40:34 ICT 2019
-sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Toshiba\\AppData\\Local\\Android\\Sdk
