--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,20 @@
         <activity android:name=".activity_login" />
         <activity android:name=".activity_register" />
 
-        <activity android:name=".activity.PemesananActivity"></activity>
-        <activity android:name=".activity.DetailActivity" />
+        <activity
+            android:name=".activity.PemesananActivity"
+            android:parentActivityName=".activity.DetailActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.DetailActivity" />
+        </activity>
+        <activity
+            android:name=".activity.DetailActivity"
+            android:parentActivityName=".BerandaActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".BerandaActivity" />
+        </activity>
 
         <activity android:name=".BerandaActivity" />
         <activity android:name="Fragment.FragmentLainnya" />
