--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //noinspection GradleCompatible
+    implementation 'org.apache.karaf.cellar:http:4.0.3'
+    implementation 'org.apache.karaf.http:http:3.0.8'
+    implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    implementation 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:design:28.+'
     implementation 'com.android.support:cardview-v7:28.+'
