--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 18 13:40:34 ICT 2019
-sdk.dir=C\:\\Users\\Toshiba\\AppData\\Local\\Android\\Sdk
+#Tue May 21 15:18:29 ICT 2019
+ndk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
