--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'org.apache.karaf.http:http:3.0.8'
     implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     implementation 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
-    implementation 'com.android.support:design:27.1.0'
+    //implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:design:28.+'
     implementation 'com.android.support:cardview-v7:28.+'
     implementation 'com.android.support:recyclerview-v7:28.+'
