--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditProfilActivity"></activity>
+        <activity android:name=".EditPasswordActivity"></activity>
+        <activity android:name=".EditProfilActivity" />
         <activity android:name=".activity_awal" />
         <activity android:name=".activity_login" />
         <activity android:name=".activity_register" />
