--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.riyagayasen.android:easyaccordion:1.0.3'
     implementation 'com.synnapps:carouselview:0.1.5'
     implementation 'de.hdodenhof:circleimageview:1.3.0'
+    implementation 'com.google.android.gms:play-services-places:11.4.2'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.github.sd6352051.niftydialogeffects:niftydialogeffects:1.0.0@aar'
